--- a/.github/workflows/activity.yml
+++ b/.github/workflows/activity.yml
@@ -1,15 +1,25 @@
-name: Update Activity
+name: GitHub Activity
 
 on:
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "*/30 * * * *"
   workflow_dispatch:
+  push:
 
 jobs:
   update-activity:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: Readme-Workflows/recent-activity@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v3
+
+      - uses: readme-activity-markdown/action@main
+        with:
+          MAX_LINES: 10
+
+      - name: Commit e push
+        run: |
+          git config --local user.email "github-actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add .
+          git commit -m "Atualização automática de atividades" || echo "Nada para atualizar"
+          git push
